precised that we follow connections

--- a/app/www/markdowns/user_infos.Rmd
+++ b/app/www/markdowns/user_infos.Rmd
@@ -1,2 +1,2 @@
-*Politique de confidentialité: La Drees ne récupère aucune information sur l'utilisateur à partir de cette application.*
+*Politique de confidentialité: Mise à part pour le suivi du nombre de consultation de l'application, la Drees ne récupère aucune information sur l'utilisateur à partir de cette application.*
 
