--- a/app/www/markdowns/help.Rmd
+++ b/app/www/markdowns/help.Rmd
@@ -7,4 +7,6 @@
 - L’onglet `Graphe interactif du SNDS` doit permettre de comprendre la structure du SNDS et les liens entre les tables. N’hésitez pas à dé-zoomer et re-zoomer avec la molette de votre souris ou à cliquer sur le graphique et le déplacer selon vos besoins.
 Les couleurs rassemblent les tables d’un même produit (orange foncé pour le DCIR, violet pour la carto, etc.). Un clic sur le nœud d’une table permet de voir le nom et le contenu de la table. Passer la souris sur un lien qui relie deux tables vous donnera les variables de jointure.
 
-- L’onglet `Infos` précise la provenance des informations, toutes issues du portail CNAM, et renvoie également vers le dépôt gitlab du Health Data Hub où le code du projet est disponible. Pour toute question et remarque sur l'application, nous vous encourageons à utiliser le [forum public d'entraide du Health Data Hub](https://entraide.health-data-hub.fr/), et en particulier la [catégorie FAQ](https://entraide.health-data-hub.fr/c/faq). Si c'est un point technique précis à traiter, il est alors préférable d'ouvrir une [issue sur GitLab](https://gitlab.com/healthdatahub/dico-snds/issues), ou d'écrire à **ld-lab-github@sante.gouv.fr**.
+- L’onglet `Infos` précise la provenance des informations, toutes issues du portail CNAM, et renvoie également vers le dépôt gitlab du Health Data Hub où le code du projet est disponible.
+
+- `Contact` : Pour toute question et remarque sur l'application, nous vous encourageons à utiliser le **[forum public d'entraide du Health Data Hub](https://entraide.health-data-hub.fr/)**, et en particulier la **[catégorie FAQ](https://entraide.health-data-hub.fr/c/faq)**. Si c'est un point technique précis à traiter, il est alors préférable d'ouvrir une **[issue sur GitLab](https://gitlab.com/healthdatahub/dico-snds/issues)**, ou d'écrire à <ld-lab-github@sante.gouv.fr>.
